-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
Using "fallocate -l <size> <file>" to allocate space to <file> does not increase the quota usage for the affected project:
# lfs quota -p 1000 /mnt/testfs
Disk quotas for prj 1000 (pid 1000):
Filesystem kbytes quota limit grace files quota limit grace
/mnt/testfs 102408 0 204800 - 3 0 10000 -
# mkdir /mnt/testfs/projdir
# lfs project -p 1000 /mnt/testfs/projdir
# fallocate -l 50M /mnt/testfs/projdir/50M
# lfs quota -p 1000 /mnt/testfs
Disk quotas for prj 1000 (pid 1000):
Filesystem kbytes quota limit grace files quota limit grace
/mnt/testfs 102408 0 204800 - 4 0 10000 -