lustre/include/cl_object.h
@@ -1874,6 +1874,7 @@ struct cl_io {
 			loff_t			 sa_falloc_end;
 			uid_t			 sa_falloc_uid;
 			gid_t			 sa_falloc_gid;
+			__u32			 sa_falloc_projid;
 		} ci_setattr;
 		struct cl_data_version_io {
 			u64 dv_data_version;
